# epitech-ratrappage-babel

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: compile_program.yaml  document_generator.yaml
bonus/base_framework/: CMakeLists.txt
bonus/base_framework/include/: MainClass.hpp  Network.hpp  TOMLLoader.hpp
bonus/base_framework/include/CustomExceptions/: No.hpp
bonus/base_framework/include/Utilities/: UnCast.hpp
bonus/base_framework/lib/: CMakeLists.txt
bonus/base_framework/lib/port_audio/: CMakeLists.txt
bonus/base_framework/src/: MainClass.cpp  RealMain.cpp
bonus/base_framework/src/CustomExceptions/: Invalid.cpp  No.cpp
bonus/base_framework/src/Network/: AddressHolder.cpp
bonus/dumb/cd/include/: Constants.hpp  CustomExceptions.hpp
bonus/dumb/cd/src/: main.cpp
bonus/dumb/record_compress_decompress_play/: CMakeLists.txt
bonus/dumb/record_compress_decompress_play/include/: Audio.hpp  Compressor.hpp  Recoded.hpp
bonus/dumb/record_compress_decompress_play/lib/: CMakeLists.txt
bonus/dumb/record_compress_decompress_play/lib/opus/: CMakeLists.txt
bonus/dumb/record_compress_decompress_play/src/: main.cpp
bonus/dumb/record_compress_decompress_receive_rewritten/: CMakeLists.txt
bonus/dumb/record_compress_decompress_receive_rewritten/lib/: CMakeLists.txt
bonus/dumb/record_play_class/dedicated_channels/: CMakeLists.txt
bonus/dumb/record_play_class/default_channel/lib/toml/: CMakeLists.txt
bonus/dumb/record_play_shitcode/: CMakeLists.txt
bonus/dumb/record_play_shitcode/src/: main.cpp
bonus/dumb/send_receive/: CMakeLists.txt  RUN_ME.sh
bonus/dumb/send_receive/include/: Network.hpp
bonus/dumb/send_receive/src/: main.cpp
bonus/lesson/: message_joffrey.txt
bonus/non_blocking_cin/: RUN_ME.sh  main.cpp
bonus/port_audio_compilation/: CMakeLists.txt  main.cpp
bonus/port_audio_compilation/lib/: CMakeLists.txt
bonus/port_audio_compilation/lib/port_audio/: CMakeLists.txt
bonus/record_play/: CMakeLists.txt
bonus/record_play/include/: Audio.hpp  Constants.hpp  Network.hpp
bonus/record_play/include/Audio/: Compressor.hpp  Manager.hpp  Network.hpp  Player.hpp
bonus/record_play/include/Controls/: UserControls.hpp
bonus/record_play/include/CustomExceptions/: Failed.hpp
bonus/record_play/include/Network/: Manager.hpp
bonus/record_play/include/Recoded/: ToString.hpp
bonus/record_play/lib/: CMakeLists.txt
bonus/record_play/src/: HelpFunctions.cpp  MainClass.cpp  RealMain.cpp
bonus/record_play/src/Audio/: Compressor.cpp  Manager.cpp  Player.cpp
bonus/record_play/src/Controls/: UserControls.cpp
bonus/record_play/src/Recoded/: ToString.cpp
bonus/send_receive_text/: CMakeLists.txt
bonus/send_receive_text/include/: Audio.hpp  Constants.hpp  MainClass.hpp  Network.hpp
bonus/send_receive_text/include/Audio/: Manager.hpp  Networker.hpp  Recorder.hpp  StreamData.hpp
bonus/send_receive_text/include/Controls/: ThreadCapsule.hpp
bonus/send_receive_text/include/Network/: Listener.hpp  Manager.hpp  Packet.hpp  Tcp.hpp  Translator.hpp  Udp.hpp
bonus/send_receive_text/include/Utilities/: OperatorRebind.hpp  UnCast.hpp
bonus/send_receive_text/lib/: CMakeLists.txt
bonus/send_receive_text/lib/asio/: CMakeLists.txt
bonus/send_receive_text/src/: HelpFunctions.cpp  MainClass.cpp  RealMain.cpp
bonus/send_receive_text/src/Audio/: Networker.cpp  Recorder.cpp
bonus/send_receive_text/src/Network/: Listener.cpp  Manager.cpp  Tcp.cpp  Translator.cpp  Udp.cpp
bonus/steps/: todo.txt
bonus/text_processor/: index.html
bonus/v1/: CMakeLists.txt
bonus/v1.1/include/Controls/: ThreadCapsule.hpp
bonus/v1.1/include/CustomExceptions/: Unknown.hpp
bonus/v1.1/include/Network/: UDP.hpp
bonus/v1.1/lib/: CMakeLists.txt
bonus/v1.1/src/Compressor/: Manager.cpp
bonus/v1.1/src/Network/: TCP.cpp
bonus/v1.2/include/: Constants.hpp
bonus/v1.2/include/Controls/: ThreadCapsule.hpp
bonus/v1.2/include/CustomExceptions/: Found.hpp  Invalid.hpp  NotFound.hpp
bonus/v1.2/include/Logging/: LogMacros.hpp
bonus/v1.2/logo/: CMakeLists.txt
bonus/v1.2/src/: main.cpp
bonus/v1.2_coredumping_on_exit/: CMakeLists.txt
bonus/v1.2_coredumping_on_exit/include/: CustomExceptions.hpp
bonus/v1.2_coredumping_on_exit/include/Compressor/: Packet.hpp
bonus/v1.2_coredumping_on_exit/include/Controls/: ThreadCapsule.hpp
bonus/v1.2_coredumping_on_exit/src/: main.cpp
bonus/v1.2_coredumping_on_exit/src/Audio/: Audio.cpp
bonus/v1.2_coredumping_on_exit/src/Controls/: ThreadCapsule.cpp
bonus/v1.3/include/: Controls.hpp
bonus/v1/include/: BootScreen.hpp  Constants.hpp  Utilities.hpp
bonus/v1/lib/: CMakeLists.txt
bonus/v1/lib/asio/: CMakeLists.txt
bonus/v1/lib/port_audio/: CMakeLists.txt
doxygen_generation/: Doxyfile
doxygen_generation/favicon/: site.webmanifest
doxygen_generation/html/: footer.html  header.html  header_include.html
doxygen_generation/latex/: latex_footer.tex  latex_header.tex
doxygen_generation/latex/stylesheet/: stylesheet.tex
doxygen_generation/rtf/stylesheet/: stylesheet.rtf
include/: Audio.hpp  BootScreen.hpp  Constants.hpp  Controls.hpp  CustomExceptions.hpp  Logging.hpp  MainClass.hpp  Network.hpp  RealMain.hpp  Recoded.hpp  Utilities.hpp
include/Audio/: Audio.hpp  Compressor.hpp  Manager.hpp  Network.hpp  Node.hpp  Sample.hpp
include/Compressor/: Manager.hpp
include/Controls/: ThreadCapsule.hpp  UserControls.hpp
include/CustomExceptions/: Failed.hpp  Found.hpp  Invalid.hpp  No.hpp
include/Logging/: Log.hpp
include/Network/: AddressHolder.hpp  TCP.hpp  UDP.hpp
include/Utilities/: OperatorRebind.hpp
lib/: CMakeLists.txt
lib/jack/: CMakeLists.txt
logo/: CMakeLists.txt
src/: BootScreen.cpp  HelpFunctions.cpp  MainClass.cpp  main.cpp
src/Audio/: Audio.cpp  Compressor.cpp  Manager.cpp  Network.cpp  Node.cpp
src/Compressor/: Manager.cpp
src/Controls/: ThreadCapsule.cpp  UserControls.cpp
src/CustomExceptions/: Found.cpp  Invalid.cpp  No.cpp
src/Logging/: Log.cpp
src/Network/: Manager.cpp  UDP.cpp
(+29 files in other folders)
