cmake_minimum_required(VERSION 3.28)
project(babel_client VERSION 1.1.0)

# Storing the project name in a temporary variable
set(TMP_PROJECT_NAME ${PROJECT_NAME})

# Get the logo displayer
include(${CMAKE_CURRENT_LIST_DIR}/logo/CMakeLists.txt)

# Display a random logo after defining the project
select_random_logo()

# Restore the project name
set(PROJECT_NAME ${TMP_PROJECT_NAME})

# Set the C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Output directory for binaries (primary: bin folder)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

# Secondary output directory: source folder
set(SECONDARY_OUTPUT_DIR ${CMAKE_SOURCE_DIR})

# Create the Build and Bin directories if they do not exist
file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/build)
file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(MAKE_DIRECTORY ${SECONDARY_OUTPUT_DIR})

# Set the source files
set(SOURCES

    # Files at the source of the program
    src/main.cpp
    src/BootScreen.cpp

    # Audio manager
    src/Audio/Audio.cpp

    # Audio compression manager
    src/Compressor/Manager.cpp

    # Custom exceptions
    src/CustomExceptions/No.cpp
    src/CustomExceptions/Found.cpp
    src/CustomExceptions/Failed.cpp
    src/CustomExceptions/Invalid.cpp
    src/CustomExceptions/Unknown.cpp
    src/CustomExceptions/NotFound.cpp

    # User controls
    src/Controls/UserControls.cpp
    src/Controls/ThreadCapsule.cpp

    # Logging library
    src/Logging/Log.cpp

    # Network manager
    src/Network/TCP.cpp
    src/Network/UDP.cpp

    # String conversion from any type
    src/Recoded/ToString.cpp
)

# Define the name of the executable that will be generated by the project
add_executable(${PROJECT_NAME} ${SOURCES})

# Add windows compliant definition flags if the project is built on Windows
# if(WIN32)
# add_definitions(-DWINDOWS)
# add_definitions(-DWINVER=0x0A00)
# add_definitions(-D_WIN32_WINNT=0x0A00)
# endif()
if(WIN32)
    add_compile_definitions(
        _WIN32_WINNT=0x0A00
        WINVER=0x0A00
    )

    # Checking the flags are applied
    message(STATUS "Final CXX Flags: ${CMAKE_CXX_FLAGS}")
endif()

# Include the CMakeLists.txt from the Lib folder
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/lib)

# Outputting the location of the asio source directory
message(STATUS "Asio source directory: ${asio_SOURCE_DIR}")
message(STATUS "Opus source directory: ${opus_SOURCE_DIR}")
message(STATUS "PortAudio source directory: ${port_audio_SOURCE_DIR}")
message(STATUS "Cmake current list dir: ${CMAKE_CURRENT_LIST_DIR}")

# Include directories for headers
target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/include

    # ${asio_SOURCE_DIR}/asio/include
)

# Check for threads
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

# Link required libraries (asio + toml++ + Opus + PortAudio)
target_link_libraries(${PROJECT_NAME}
    PRIVATE
    babel_libraries
    Threads::Threads
)

# Enable debug mode
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message(STATUS "Debug mode detected: Compiling with debug flags")
    target_compile_options(${PROJECT_NAME} PRIVATE -g3)
endif()

# Custom target to clean build artifacts
add_custom_target(fclean
    COMMAND ${CMAKE_COMMAND} -E remove_directory ${CMAKE_BINARY_DIR}
    COMMENT "Removing all build artifacts and directories"
)

# Add a post-build step to copy binaries to the secondary location
add_custom_target(copy_binaries ALL
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} ${SECONDARY_OUTPUT_DIR}
    DEPENDS ${PROJECT_NAME}
)

# Ensure the custom target depends on all subdirectories
# This is now safe to do after defining the targets.
add_dependencies(copy_binaries ${PROJECT_NAME})
